# Enigma

./: .gitignore  LICENSE  README.md
deploy/: CMakeLists_install.txt  README.md
docs/: Backend.md  CLI.md  CMakeLists.md  Enigma Implemenation.md  Enigma.md  Frontend.md  TuringBomb.md
docs/.obsidian/: workspace.json
enigma_c/: CMakeLists.txt
enigma_c/src/: CMakeLists.txt  main.c
enigma_c/src/cli/: cli.c  cli.h  cli_enigma.c  cli_enigma.h
enigma_c/src/cyclometer/: cycle_generator.c  cyclometer.c  cyclometer.h  server_cyclometer.c  server_cyclometer.h
enigma_c/src/data/: crib_cipher_cycle.dot  enigma.json
enigma_c/src/enigma/: enigma.c  enigma.h
enigma_c/src/enigma/plugboard/: plugboard.c  plugboard.h
enigma_c/src/enigma/reflector/: reflector.c  reflector.h
enigma_c/src/enigma/rotor/: rotor.c  rotor.h
enigma_c/src/gui/: GUI.glade~  Turing_Bomb.glade~  bomb_gui.c  bomb_gui.h  bomb_out.c  bomb_out.h  enigma_gui.c  enigma_gui.h  start_gui.c  start_gui.h
enigma_c/src/gui/bomb_gui/: bomb_gui.c  bomb_gui.h
enigma_c/src/gui/bomb_out_gui/: bomb_out.c  bomb_out.h
enigma_c/src/gui/bombe_gui/: bombe_gui.c
enigma_c/src/gui/bombe_out_gui/: bombe_out.c
enigma_c/src/gui/enigma_gui/: enigma_gui.c
enigma_c/src/gui/glade/: GUI.glade~  bomb.glade~  bombe.glade  enigma.glade  enigma.glade~  start.glade  start.glade~
enigma_c/src/gui/start_gui/: start_gui.c  start_gui.h
enigma_c/src/helper/: hashmap.c  hashmap.h  helper.c  helper.h  linkedlist.c  linkedlist.h
enigma_c/src/json/: json.c  json.h
enigma_c/src/server/: cyclometer_adapter.c  cyclometer_adapter.h  db_cyclometer.c  db_cyclometer.h  enigma_adapter.c  enigma_adapter.h  server.c  server.h
enigma_c/src/turing_bomb/: brute_force.c  brute_force.h  cycle_finder.c  cycle_finder.h  diagonal_board.c  diagonal_board.h  turing_bomb.c  turing_bomb.h
enigma_c/src/turing_bomb/cycle_finder/: cycle_finder.c  cycle_finder.h  cycle_finder_graph.c  cycle_finder_graph.h  cycle_finder_old.c  cycle_finder_old.h  graph_builder.c  graph_builder.h
enigma_c/src/turing_bombe/: brute_force.c  turing_bombe.c  turing_bombe.h
enigma_c/src/turing_bombe/cycle_finder/: cycle_finder.c  cycle_finder.h  cycle_finder_graph.c  cycle_finder_graph.h  graph_test.c  graph_test.h
tools/: generate_message_keys.sh  install_deps.sh
