add_library(enigma_lib
        cyclometer/cycle_generator.c
        cyclometer/cycle_generator.h
        cyclometer/cyclometer.c
        cyclometer/cyclometer.h
        enigma/enigma.c
        enigma/enigma.h
        enigma/rotor/rotor.c
        enigma/rotor/rotor.h
        enigma/reflector/reflector.c
        enigma/reflector/reflector.h
        enigma/plugboard/plugboard.c
        enigma/plugboard/plugboard.h
        cli/cli.c
        cli/cli.h
        cli/cli_enigma.c
        cli/cli_enigma.h
        helper/helper.c
        helper/helper.h
        helper/hashmap.h
        helper/hashmap.c
        json/json.h
        json/json.c
        json/cJSON.c
        json/cJSON.h
        gui/enigma_gui/enigma_gui.c
        gui/enigma_gui/enigma_gui.h
        gui/bomb_out_gui/bomb_out.c
        gui/bomb_out_gui/bomb_out.h
        gui/start_gui/start_gui.c
        gui/start_gui/start_gui.h
        gui/bomb_gui/bomb_gui.c
        gui/bomb_gui/bomb_gui.h
        turing_bomb/brute_force.h
        turing_bomb/brute_force.c
        turing_bomb/diagonal_board.h
        turing_bomb/diagonal_board.c
        turing_bomb/turing_bomb.c
        turing_bomb/turing_bomb.h
        turing_bomb/cycle_finder/cycle_finder_graph.c
        turing_bomb/cycle_finder/cycle_finder_graph.h
        turing_bomb/cycle_finder/cycle_finder.c
        turing_bomb/cycle_finder/cycle_finder.h
)

target_include_directories(enigma_lib PUBLIC .)
