add_library(enigma_lib
        cyclometer/cyclometer.c
        cyclometer/cyclometer.h
        cyclometer/cycle_generator.c
        cyclometer/cycle_generator.h
        enigma/enigma.c
        enigma/enigma.h
        enigma/rotor/rotor.c
        enigma/rotor/rotor.h
        enigma/reflector/reflector.c
        enigma/reflector/reflector.h
        enigma/plugboard/plugboard.c
        enigma/plugboard/plugboard.h
        cli/cli.c
        cli/cli.h
        cli/cli_enigma.c
        cli/cli_enigma.h
        helper/helper.c
        helper/helper.h
        helper/hashmap.h
        helper/hashmap.c
        json/json.h
        json/json.c
        json/cJSON.c
        json/cJSON.h
        gui/enigma_gui/enigma_gui.c
        gui/enigma_gui/enigma_gui.h
        gui/bombe_out_gui/bombe_out.c
        gui/bombe_out_gui/bombe_out.h
        gui/start_gui/start_gui.c
        gui/start_gui/start_gui.h
        gui/bombe_gui/bombe_gui.c
        gui/bombe_gui/bombe_gui.h
        turing_bombe/brute_force.h
        turing_bombe/brute_force.c
        turing_bombe/turing_bombe.c
        turing_bombe/turing_bombe.h
        turing_bombe/cycle_finder/cycle_finder_graph.c
        turing_bombe/cycle_finder/cycle_finder_graph.h
        helper/linkedlist.c
        turing_bombe/cycle_finder/cycle_finder.c
        turing_bombe/cycle_finder/cycle_finder.h
        turing_bombe/cycle_finder/graph_test.c
        turing_bombe/cycle_finder/graph_test.h
        server/server.c
        server/server.h
        server/picohttpparser.c
        server/picohttpparser.h
        cyclometer/server_cyclometer.c
        cyclometer/server_cyclometer.h
)

target_include_directories(enigma_lib PUBLIC .)
